--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-HTTP/1.1 200 OK\r\nContent-Length: 187\r\nContent-Type: text/plain\r\n\r\n"My test page"
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <h1>Hellow World</h1>
+    <p>Webserv project</p>
+</body>
+</html>
