--- a/resource/hello.html
+++ b/resource/hello.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>index</title>
+    <title>hello</title>
 </head>
 <body>
-    <h1>This is index</h1>
+    <h1>Heelo</h1>
 </body>
 </html>
