--- a/resource/index.html
+++ b/resource/index.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>index</title>
+  <title>POST 요청 보내기</title>
 </head>
 <body>
-    <h1>This is index</h1>
+  <h1>POST 요청 보내기</h1>
+  <form id="dataForm" action="http://0.0.0.0:4242" method="post">
+    <label for="age">나이:</label>
+    <input type="text" id="age" name="age" required><br>
+    <button type="submit">서버로 보내기</button>
+  </form>
 </body>
 </html>
