Fix: multiple file add

--- a/resource/file.html
+++ b/resource/file.html
@@ -7,7 +7,7 @@
   <h1>File 요청 보내기</h1>
   <div class="choices">
 	<form action="http://0.0.0.0:4242" method="post" enctype="multipart/form-data">
-		<input type="file" name="name" id="">
+		<input type="file" name="name" id="" multiple>
 		<button type="submit">submit</button>
 	</form>
 </div>
