--- a/src/pages/file.html
+++ b/src/pages/file.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <title>File</title>
+  <link rel="shortcut icon" href="data:image/x-icon;," type="image/x-icon">
 </head>
 <body>
   <h1>File 요청 보내기</h1>
